@@ -1,3 +1,9 @@
+2010-05-13  Uros Bizjak  <ubizjak@gmail.com>
+
+	* tests/leak_test.c (main): Declare as int.  Return 0.
+	* tests/thread_leak_test.c (main): Ditto.
+	* tests/trace_test.c (main): Ditto.
+
 2010-05-06  Dave Korn  <dave.korn.cygwin@gmail.com>
 
 	PR target/42811
